--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <!-- data-bs-theme ['auto', 'dark', 'light'] -->
 <!-- Recommend use 'data-src' in img tag -->
 
-<body data-key="bfb9cfea33ab7ae21a315fbd6f065a815d3e20ff2f007aa2ca" data-url="https://api.ulems.my.id/">
+<body>
 
     <!-- Root Invitation -->
     <div class="row m-0 p-0" style="opacity: 0;" id="root">
@@ -156,8 +156,6 @@
                 <section class="bg-white-black text-center" id="bride">
                     <h3 class="font-cinzel py-4 m-0" style="font-size: 1.5rem;">"Therefore what God has joined together, let no one separate."</h3>
                     <h3 class="font-cinzel py-4 m-0" style="font-size: 1.75rem;">Mark 10:9</h3>
-                    <h2 class="font-cinzel py-4 m-0" style="font-size: 2rem;">Best wishes for us all</h2>
-                    <p class="font-hanken-grotesk pb-4 px-2 m-0" style="font-size: 0.95rem;">By the blessing and the grace of God, We cordially request the honour of your presence at the Holy Martimony</p>
 
                     <!-- Love animation -->
                     <div class="position-relative">
@@ -215,37 +213,10 @@
                     </div>
                 </section>
 
-                <!-- Wave Separator -->
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="color-theme-svg no-gap-bottom">
-                    <path fill="currentColor" fill-opacity="1" d="M0,192L40,181.3C80,171,160,149,240,149.3C320,149,400,171,480,165.3C560,160,640,128,720,128C800,128,880,160,960,186.7C1040,213,1120,235,1200,218.7C1280,203,1360,149,1400,122.7L1440,96L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path>
-                </svg>
-
-                <!-- Tuhan Bersabda -->
-                <section class="bg-light-dark pt-2 pb-4">
-                    <div class="container text-center">
-                        <h2 class="font-cinzel py-2 m-0" style="font-size: 2rem;">Tuhan Bersabda</h2>
-
-                        <div class="bg-theme-auto mt-4 p-3 shadow rounded-4" data-aos="fade-up" data-aos-duration="2000">
-                            <p class="font-hanken-grotesk p-1 mb-3" style="font-size: 0.95rem;">Dan segala sesuatu Kami ciptakan berpasang-pasangan agar kamu mengingat (kebesaran Allah).</p>
-                            <a class="font-hanken-grotesk m-0 p-0 text-theme-auto link-offset-2" style="font-size: 0.95rem;" target="_blank" href="https://quran.com/id/51/49">QS. Adh-Dhariyat: 49</a>
-                        </div>
-
-                        <div class="bg-theme-auto mt-4 p-3 shadow rounded-4" data-aos="fade-up" data-aos-duration="2000">
-                            <p class="font-hanken-grotesk p-1 mb-3" style="font-size: 0.95rem;">dan sesungguhnya Dialah yang menciptakan pasangan laki-laki dan perempuan,</p>
-                            <a class="font-hanken-grotesk m-0 p-0 text-theme-auto link-offset-2" style="font-size: 0.95rem;" target="_blank" href="https://quran.com/id/53/45">QS. An-Najm: 45</a>
-                        </div>
-                    </div>
-                </section>
-
-                <!-- Wave Separator -->
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="color-theme-svg no-gap-bottom">
-                    <path fill="currentColor" fill-opacity="1" d="M0,96L30,106.7C60,117,120,139,180,154.7C240,171,300,181,360,186.7C420,192,480,192,540,181.3C600,171,660,149,720,154.7C780,160,840,192,900,208C960,224,1020,224,1080,208C1140,192,1200,160,1260,138.7C1320,117,1380,107,1410,101.3L1440,96L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path>
-                </svg>
-
                 <!-- Wedding Date -->
                 <section class="bg-white-black pb-2" id="wedding-date">
                     <div class="container text-center">
-                        <h2 class="font-cinzel py-4 m-0" style="font-size: 2.25rem;">Moment Bahagia</h2>
+                        <h2 class="font-cinzel py-4 m-0" style="font-size: 2.25rem;">Our journey to forever begins on: </h2>
 
                         <div class="border rounded-pill shadow py-2 px-4 mt-2 mb-4">
                             <!-- Ganti waktunya pada data-waktu (sesuai format tersebut) -->
@@ -377,7 +348,7 @@
                 <section class="bg-light-dark pb-4">
                     <div class="container text-center">
                         <h2 class="font-cinzel pt-3 mb-4" style="font-size: 2.25rem;">Love Gift</h2>
-                        <p class="font-hanken-grotesk mb-1" style="font-size: 0.95rem;">Dengan hormat, bagi Anda yang ingin memberikan tanda kasih kepada kami, dapat melalui:</p>
+                        <p class="font-hanken-grotesk mb-1" style="font-size: 0.95rem;">Your presence at our wedding is the greatest gift of all. Should you wish to honor us with a gift, you are welcome to send it to:</p>
 
                         <div class="bg-theme-auto rounded-4 shadow p-3 mx-4 mt-4 text-start" data-aos="fade-up" data-aos-duration="2500">
                             <i class="fa-solid fa-money-bill-transfer"></i>
@@ -385,10 +356,10 @@
 
                             <div class="d-flex justify-content-between align-items-center mt-2">
                                 <p class="m-0 p-0" style="font-size: 0.95rem;"><i class="fa-solid fa-person me-1"></i>Kristopher Chayadi</p>
-                                <button class="btn btn-outline-auto btn-sm shadow-sm rounded-4 py-0" style="font-size: 0.75rem;" data-bs-toggle="collapse" data-bs-target="#collapseTf"><i class="fa-solid fa-circle-info fa-sm me-1"></i>Info</button>
+                                <!-- <button class="btn btn-outline-auto btn-sm shadow-sm rounded-4 py-0" style="font-size: 0.75rem;" data-bs-toggle="collapse" data-bs-target="#collapseTf"><i class="fa-solid fa-circle-info fa-sm me-1"></i>Info</button> -->
                             </div>
 
-                            <div class="collapse" id="collapseTf">
+                            <div class="collapse show" id="collapseTf">
                                 <hr class="my-2 py-1">
                                 <img src="./assets/images/placeholder.webp" data-src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Bank_Central_Asia.svg/1598px-Bank_Central_Asia.svg.png" class="img-fluid p-1 rounded" style="max-width: 9vh; background-color: var(--bs-gray-300);" alt="bca">
                                 <div class="d-flex justify-content-between align-items-center mt-2">
@@ -405,40 +376,23 @@
 
                             <div class="d-flex justify-content-between align-items-center mt-2">
                                 <p class="m-0 p-0" style="font-size: 0.95rem;"><i class="fa-solid fa-person me-1"></i>Celine Linardi</p>
-                                <button class="btn btn-outline-auto btn-sm shadow-sm rounded-4 py-0" style="font-size: 0.75rem;" data-bs-toggle="collapse" data-bs-target="#collapseTfCeline"><i class="fa-solid fa-circle-info fa-sm me-1"></i>Info</button>
+                                <!-- <button class="btn btn-outline-auto btn-sm shadow-sm rounded-4 py-0" style="font-size: 0.75rem;" data-bs-toggle="collapse" data-bs-target="#collapseTfCeline"><i class="fa-solid fa-circle-info fa-sm me-1"></i>Info</button> -->
                             </div>
 
-                            <div class="collapse" id="collapseTfCeline">
+                            <div class="collapse show" id="collapseTfCeline">
                                 <hr class="my-2 py-1">
                                 <img src="./assets/images/placeholder.webp" data-src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Bank_Central_Asia.svg/1598px-Bank_Central_Asia.svg.png" class="img-fluid p-1 rounded" style="max-width: 9vh; background-color: var(--bs-gray-300);" alt="bca">
                                 <div class="d-flex justify-content-between align-items-center mt-2">
-                                    <p class="m-0 p-0" style="font-size: 0.85rem;"><i class="fa-solid fa-credit-card me-1"></i>1234567891234</p>
+                                    <p class="m-0 p-0" style="font-size: 0.85rem;"><i class="fa-solid fa-credit-card me-1"></i>0820185897</p>
                                     <!-- Ubah juga data-copy sesuai dengan no rekening -->
-                                    <button class="btn btn-outline-auto btn-sm shadow-sm rounded-4 py-0" style="font-size: 0.75rem;" data-copy="1234567891234" onclick="undangan.util.copy(this)"><i class="fa-solid fa-copy"></i></button>
+                                    <button class="btn btn-outline-auto btn-sm shadow-sm rounded-4 py-0" style="font-size: 0.75rem;" data-copy="0820185897" onclick="undangan.util.copy(this)"><i class="fa-solid fa-copy"></i></button>
                                 </div>
-                            </div>
-                        </div>
-
-                        <div class="bg-theme-auto rounded-4 shadow p-3 mx-4 mt-4 text-start" data-aos="fade-up" data-aos-duration="2500">
-                            <i class="fa-solid fa-gift fa-lg"></i>
-                            <p class="d-inline">Gift</p>
-
-                            <div class="d-flex justify-content-between align-items-center mt-2">
-                                <p class="m-0 p-0" style="font-size: 0.95rem;"><i class="fa-solid fa-person me-1"></i>Kristopher Siapa?</p>
-                                <button class="btn btn-outline-auto btn-sm shadow-sm rounded-4 py-0" style="font-size: 0.75rem;" data-bs-toggle="collapse" data-bs-target="#collapseGift"><i class="fa-solid fa-circle-info fa-sm me-1"></i>Info</button>
-                            </div>
-
-                            <div class="collapse" id="collapseGift">
-                                <hr class="my-2 py-1">
-                                <div class="d-flex justify-content-between align-items-center mb-2">
-                                    <p class="m-0 p-0" style="font-size: 0.85rem;"><i class="fa-solid fa-phone-volume me-1"></i>0812345678</p>
-                                    <!-- Ubah juga data-copy sesuai dengan no hp -->
-                                    <button class="btn btn-outline-auto btn-sm shadow-sm rounded-4 py-0" style="font-size: 0.75rem;" data-copy="0812345678" onclick="undangan.util.copy(this)"><i class="fa-solid fa-copy"></i></button>
-                                </div>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <p class="my-0 p-0 text-truncate me-2" style="font-size: 0.85rem;"><i class="fa-solid fa-location-dot me-1"></i>RT 10 RW 02, Desa Pajerukan, Kec. Kalibagor, Kab. Banyumas, Jawa Tengah 53191.</p>
-                                    <!-- Ubah juga data-copy sesuai dengan alamat -->
-                                    <button class="btn btn-outline-auto btn-sm shadow-sm rounded-4 py-0" style="font-size: 0.75rem;" data-copy="RT 10 RW 02, Desa Pajerukan, Kec. Kalibagor, Kab. Banyumas, Jawa Tengah 53191." onclick="undangan.util.copy(this)"><i class="fa-solid fa-copy"></i></button>
+                                
+                                <img src="./assets/images/placeholder.webp" data-src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/PayPal.svg/1024px-PayPal.svg.png" class="img-fluid p-1 rounded mt-4" style="max-width: 9vh; background-color: var(--bs-gray-300);" alt="paypal">
+                                <div class="d-flex justify-content-between align-items-center mt-2">
+                                    <p class="m-0 p-0" style="font-size: 0.85rem;"><i class="fa-solid fa-credit-card me-1"></i>celine.linardi21@gmail.com</p>
+                                    <!-- Ubah juga data-copy sesuai dengan no rekening -->
+                                    <button class="btn btn-outline-auto btn-sm shadow-sm rounded-4 py-0" style="font-size: 0.75rem;" data-copy="celine.linardi21@gmail.com" onclick="undangan.util.copy(this)"><i class="fa-solid fa-copy"></i></button>
                                 </div>
                             </div>
                         </div>
@@ -507,9 +461,7 @@
                 <!-- End Of Invitation -->
                 <section class="bg-white-black py-2 no-gap-bottom">
                     <div class="container text-center">
-                        <p class="font-hanken-grotesk pb-2 pt-4" style="font-size: 0.95rem;">Terima kasih atas perhatian dan doa restu Anda, yang menjadi kebahagiaan serta kehormatan besar bagi kami.</p>
-
-                        <h2 class="font-cinzel" style="font-size: 2rem;">Wassalamualaikum Warahmatullahi Wabarakatuh</h2>
+                        <p class="font-hanken-grotesk pb-2 pt-4" style="font-size: 0.95rem;">We look forward to celebrate our wedding day with you</p>
 
                         <hr class="my-3">
 
@@ -517,10 +469,11 @@
                             <div class="col-auto">
                                 <small>Build with<i class="fa-solid fa-heart mx-1"></i>Dewanakl</small>
                                 <br>
-                                <small>Updated by Leinheart1688</small>
+                                <small>Updated by LeinHeart</small>
                             </div>
                             <div class="col-auto">
-                                <small><i class="fa-brands fa-github me-1"></i><a target="_blank" href="https://github.com/dewanakl/undangan">github</a></small>
+                                <small><i class="fa-brands fa-github me-1"></i><a target="_blank" href="https://github.com/dewanakl/undangan">dewanakl</a></small>
+                                <small><i class="fa-brands fa-github me-1"></i><a target="_blank" href="https://github.com/LeinHeart/online-invitation-kris-celine">Leinheart</a></small>
                             </div>
                         </div>
                     </div>
