--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- Appearance -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="Website Undangan Holy Martimony Kristopher dan Celine Secara Online">
+    <meta name="apple-mobile-web-app-title" content="Website Undangan Holy Matrimony Kristopher dan Celine Secara Online">
     <meta name="theme-color" content="#000000">
     <meta name="color-scheme" content="dark light">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -125,7 +125,7 @@
 
                     <div class="position-relative text-center">
                         <!-- <h1 class="cinzel-decorative-regular my-4 pt-4 fw-medium" style="font-size: 2.25rem;">Undangan Pemberkatan Pernikahan</h1> -->
-                        <h1 class="font-garamond" style="font-size: 2.25rem;">Holy Martimony Invitation</h1>
+                        <h1 class="font-garamond" style="font-size: 2.25rem;">Holy Matrimony Invitation</h1>
 
 
                         <img src="./assets/images/placeholder.webp" data-src="./assets/images/berdua-5.jpg" alt="bg" onclick="undangan.guest.modal(this)" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto">
@@ -249,7 +249,7 @@
 
                         <div class="overflow-x-hidden">
                             <div class="py-2" data-aos="fade-right" data-aos-duration="1500">
-                                <h2 class="font-cinzel m-0 py-2" style="font-size: 2rem;">Holy Martimony</h2>
+                                <h2 class="font-cinzel m-0 py-2" style="font-size: 2rem;">Holy Matrimony</h2>
                                 <br style="font-size: 0.95rem;">11 AM - Finish
                                 <br style="font-size: 0.95rem;">Atria Hotel Gading Serpong
                             </div>
@@ -522,7 +522,7 @@
     <div class="loading-page bg-white-black" id="welcome" style="opacity: 0;">
         <div class="d-flex justify-content-center align-items-center vh-100 overflow-y-scroll">
             <div class="d-flex flex-column text-center">
-                <h2 class="font-garamond mb-4" style="font-size: 2.25rem;">The Holy Martimony Of</h2>
+                <h2 class="font-garamond mb-4" style="font-size: 2.25rem;">The Holy Matrimony Of</h2>
 
                 <img src="./assets/images/placeholder.webp" data-src="./assets/images/berdua-5.jpg" alt="background" class="img-center-crop rounded-circle border border-3 border-light shadow mb-4 mx-auto">
 
