--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha256-ORBCb//WwUWwNh+EjsvO97snO3mAJ1+jhMzrlPBTYSQ=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js" integrity="sha256-pQBbLkFHcP1cy0C8IhoSdxlm0CtcH5yJ2ki9jjgR03c=" crossorigin="anonymous"></script>
     <script src="./dist/guest.js"></script>
+    
 </head>
 
 <!-- If not using comments, you can remove the data-key, data-url attributes, and ignore dashboard.html -->
@@ -85,7 +86,7 @@
 <!-- data-bs-theme ['auto', 'dark', 'light'] -->
 <!-- Recommend use 'data-src' in img tag -->
 
-<body>
+<body  data-key="d9faced3377732b0edf19e90d1bde0cd5de04801c75eb41743" data-url="https://kris-celine-online-invitation-api.vercel.app/">
 
     <!-- Root Invitation -->
     <div class="row m-0 p-0" style="opacity: 0;" id="root">
